base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reaktor-api
spec:
  selector:
    app: api
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
